--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Arduino Workshop</h3>
                             <div class="subheading mb-3"></div>
-                            <p>A Workshop organised by a group BCA and Integrated MCA students.</p>
+                            <p>A Workshop organised by a group of BCA and Integrated MCA students.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">April 10 2022</span></div>
                     </div>
