--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         Vakathanam · Kottayam, Kerala,India - 686538 · +91 9656006978 ·
-                        <a href="godlykmathews@outlook.com">godlykmathews@outlook.com</a>
+                        <a href="mailto:godlykmathews@outlook.com">godlykmathews@outlook.com</a>
                     </div>
                     <p class="lead mb-5">I am self-taught programmer. Seeking more skills in c++ and python .</p>
                     <div class="social-icons">
