--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="gallery.html">Gallery</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Gallery">Gallery</a></li>
                 </ul>
             </div>
         </nav>
@@ -45,8 +45,7 @@
                         <span class="text-primary">K Mathews</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Vakathanam · Kottayam, Kerala,India - 686538 · +91 9656006978 ·
-                        <a href="mailto:godlykmathews@outlook.com">godlykmathews@outlook.com</a>
+                        Vakathanam · Kottayam, Kerala,India - 686538 · +91 9656006978 · <a href="mailto:godlykmathews@outlook.com"> godlykmathews@outlook.com</a>
                     </div>
                     <p class="lead mb-5">I am self-taught programmer. Seeking more skills in c++ and python .</p>
                     <div class="social-icons">
@@ -70,7 +69,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Arduino Workshop</h3>
                             <div class="subheading mb-3"></div>
-                            <p>A Workshop organised by a group of BCA and Integrated MCA students.</p>
+                            <p>One day Workshop by EDUNEXT.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">April 10 2022</span></div>
                     </div>
@@ -162,6 +161,51 @@
                 </div>
             </section>
         </div>
+
+        <!-- Gallery-->
+        
+        <div>
+        <section>
+        <div id="Gallery" class="carousel carousel-dark slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#Gallery" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#Gallery" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#Gallery" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="10000">
+                <img src="assets/img/workshop certifcate 1.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Robotics Workshop Certifcate</h5>
+                  <p>One day workshop by EDUNEXT.</p>
+                </div>
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="assets/img/Voice_of_Customer-CERTIFICATE_1404-1.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Voice Of Customer</h5>
+                  <p>Young Innovators programme YIP Voice Of Customer Certificate.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="assets/img/jan andolan certificate godly.jpeg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Jan Andolan Certifcate</h5>
+                  <p>.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#Gallery" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#Gallery" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>  
+          </div>
+        </section>
+    </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
