--- a/index.html
+++ b/index.html
@@ -4,37 +4,37 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="Godly K Mathews" content="" />
         <title>Godly K Mathew</title>
         <link rel="icon" type="image/x-icon" href="assets/img/icon.png" />
-        <!-- Font Awesome icons-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="sideNav">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Godly K Mathews</span>
-                <span class="d-block d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About Me</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Gallery">Gallery</a></li>
                 </ul>
             </div>
         </nav>
+        <!--Smaller Display profile_img-->
+        <div class="w-50 p-3" style="width:800px; margin:0 auto;">
+            <span class="d-block d-lg-none"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
+        </div>
         <!-- Page Content-->
         <div class="container-fluid p-0">
             <!-- About-->
@@ -45,7 +45,7 @@
                         <span class="text-primary">K Mathews</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Vakathanam · Kottayam, Kerala,India - 686538 · +91 9656006978 · <a href="mailto:godlykmathews@outlook.com"> godlykmathews@outlook.com</a>
+                        Kottayam,Kerala,India - 686538 · +91 9656006978 · <a href="mailto:godlykmathews@outlook.com">godlykmathews@outlook.com</a>
                     </div>
                     <p class="lead mb-5">I am self-taught programmer. Seeking more skills in c++ and python .</p>
                     <div class="social-icons">
@@ -112,7 +112,7 @@
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
                         <li class="list-inline-item"><i class="fa-solid fa-c"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-cuttlefish">++</i></li>
+                        <li class="list-inline-item"><i class="fab fa-cuttlefish"></i>++</li>
                         <li class="list-inline-item"><i class="fa-brands fa-java"></i></li>
                         <li class="list-inline-item"><i class="fa-brands fa-linux"></i></li>
                     </ul>
@@ -161,51 +161,6 @@
                 </div>
             </section>
         </div>
-
-        <!-- Gallery-->
-        
-        <div>
-        <section>
-        <div id="Gallery" class="carousel carousel-dark slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#Gallery" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#Gallery" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#Gallery" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="10000">
-                <img src="assets/img/workshop certifcate 1.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Robotics Workshop Certifcate</h5>
-                  <p>One day workshop by EDUNEXT.</p>
-                </div>
-              </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="assets/img/Voice_of_Customer-CERTIFICATE_1404-1.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Voice Of Customer</h5>
-                  <p>Young Innovators programme YIP Voice Of Customer Certificate.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="assets/img/jan andolan certificate godly.jpeg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Jan Andolan Certifcate</h5>
-                  <p>.</p>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#Gallery" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#Gallery" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>  
-          </div>
-        </section>
-    </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
