--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="" />
         <meta name="Godly K Mathews" content="" />
         <title>Godly K Mathew</title>
+        <meta property="og:image" content="https://godlykm.github.io/GodlyKMathews/assets/img/profile.jpg" />
         <link rel="icon" type="image/x-icon" href="assets/img/icon.png" />
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
