--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="Godly K Mathews" content="" />
-        <title>Godly K Mathew</title>
+        <title>Godly K Mathews</title>
         <meta property="og:image" content="https://godlykm.github.io/GodlyKMathews/assets/img/profile.jpg" />
         <link rel="icon" type="image/x-icon" href="assets/img/icon.png" />
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
