--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Technical Higher Secondary School, IHRD, Kottayam</h3>
-                            <div class="subheading mb-3">Physical Science-plus one</div>
+                            <div class="subheading mb-3">Physical Science-Plus Two</div>
                             <div>Computer Science - Electronics</div>
                             <p></p> <!--marks after +2-->
                         </div>
