--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            A Grade For Science Fair Sub District Level - Arduino Project
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Brototype 100K Coding Challenge 
                         </li>
                         <li>
