--- a/index.html
+++ b/index.html
@@ -125,12 +125,18 @@
                         <li class="list-inline-item"><i class="fab fa-cuttlefish"></i>++</li>
                         <li class="list-inline-item"><i class="fa-brands fa-java"></i></li>
                         <li class="list-inline-item"><i class="fa-brands fa-linux"></i></li>
+                        <li class="list-inline-item"><i class="  "></i></li>
+                        <li class="list-inline-item"><i class="  "></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Responsive Web Design
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Arduino Robotics
                         </li>
                     </ul>
                 </div>
