--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
                     </div>
                     <p class="lead mb-5">I am self-taught programmer. Seeking more skills in c++ and python .</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://in.linkedin.com/in/godly-k-mathews-64552622a" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/Godlykm"><i class="fab fa-github" target="_blank"></i></a>
-                        <a class="social-icon" href="https://twitter.com/MathewsGodly"><i class="fab fa-twitter" target="_blank"></i></a>
-                        <a class="social-icon" href="https://www.facebook.com/mathews.ad345"><i class="fab fa-facebook-f" target="_blank"></i></a>
-                        <a class="social-icon" href="https://www.instagram.com/godly_k_mathews_"><i class="fa-brands fa-instagram" target="_blank"></i></a>
-                        <a class="social-icon" href="https://wa.me/%2B919656006978?text=Hii"><i class="fa-brands fa-whatsapp" target="_blank"></i></a>
+                        <a class="social-icon" href="https://in.linkedin.com/in/godly-k-mathews-64552622a" target="blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/Godlykm"><i class="fab fa-github" target="blank"></i></a>
+                        <a class="social-icon" href="https://twitter.com/MathewsGodly"><i class="fab fa-twitter" target="blank"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/mathews.ad345"><i class="fab fa-facebook-f" target="blank"></i></a>
+                        <a class="social-icon" href="https://www.instagram.com/godly_k_mathews_"><i class="fa-brands fa-instagram" target="blank"></i></a>
+                        <a class="social-icon" href="https://wa.me/%2B919656006978?text=Hii"><i class="fa-brands fa-whatsapp" target="blank"></i></a>
                     </div>
                 </div>
             </section>
@@ -125,8 +125,6 @@
                         <li class="list-inline-item"><i class="fab fa-cuttlefish"></i>++</li>
                         <li class="list-inline-item"><i class="fa-brands fa-java"></i></li>
                         <li class="list-inline-item"><i class="fa-brands fa-linux"></i></li>
-                        <li class="list-inline-item"><i class="  "></i></li>
-                        <li class="list-inline-item"><i class="  "></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
