--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            A Grade For Science Fair Sub District Level - Arduino Project
+                            A Grade For Science Fair District Level - Arduino Project
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
