--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
                     <p><q>First, solve the problem. Then, write the code.</q> - John Johnson</p>
                     <p class="lead mb-5">I am a self-taught programmer and yes I started right from scratch.<br> I'm a Computer Science Student at THSS Puthuppally. Right now I'm seeking more skills in C++ and python.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://in.linkedin.com/in/godly-k-mathews-64552622a" target="blank"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/Godlykm"><i class="fab fa-github" target="blank"></i></a>
-                        <a class="social-icon" href="https://twitter.com/MathewsGodly"><i class="fab fa-twitter" target="blank"></i></a>
-                        <a class="social-icon" href="https://www.facebook.com/mathews.ad345"><i class="fab fa-facebook-f" target="blank"></i></a>
-                        <a class="social-icon" href="https://www.instagram.com/godly_k_mathews_"><i class="fa-brands fa-instagram" target="blank"></i></a>
-                        <a class="social-icon" href="https://wa.me/%2B919656006978?text=Hii"><i class="fa-brands fa-whatsapp" target="blank"></i></a>
+                        <a class="social-icon" href="https://in.linkedin.com/in/godly-k-mathews-64552622a" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/Godlykm" target="_blank" ><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://twitter.com/MathewsGodly" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/mathews.ad345" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.instagram.com/godly_k_mathews_" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a class="social-icon" href="https://wa.me/%2B919656006978?text=Hii" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                     </div>
                 </div>
             </section>
@@ -97,7 +97,7 @@
                             <h3 class="mb-0">MGM public School, Vakathanam, Kottayam</h3>
                             <div class="subheading mb-3">CBSE Delhi-Board</div>
                             <div>Grade 10</div>
-                            <p>Score: 82.8%</p>
+                            <div  class="two"><p>Score: 82.8%&emsp;</p><a target="_blank" style="text-decoration: none;" href="https://drive.google.com/file/d/1RGdMIh7qo05y3UORJOroYIQinlctsPXf/view?usp=sharing">Certificate</a></div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2009 - March 2021</span></div>
                     </div>
@@ -160,12 +160,20 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            YIP - Voice of customer(Voc-2021)
+                            <div style="display: inline-block;"  class="flex-shrink-0"><a href="https://drive.google.com/file/d/1mrWR8sx1OTIZxZVnpc85PQQsqNLYG9sb/view?usp=sharing" target="_blank" style="text-decoration: none; color: #7583a0;"><span>YIP - Voice of customer(Voc-2021)</span></a></div>
+                        </li>
+
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Arduino Workshop Participation
+                            <a href="https://drive.google.com/file/d/1tgpgrJXEr1jhqhzKAFr2gZTr6XUuS_tP/view?usp=sharing" target="_blank" style="text-decoration: none; color: #7583a0;"><span>Arduino Workshop Participation</span></a>
                         </li>
-                        
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <a href="https://drive.google.com/file/d/1tgpgrJXEr1jhqhzKAFr2gZTr6XUuS_tP/view?usp=sharing" target="_blank" style="text-decoration: none; color: #7583a0;"><span>Jan Andolan for COVID-19 Appropriate Behaviour</span></a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <a href="https://drive.google.com/file/d/1aBF0BFRB2QKaijoyOc5jx7kxZc2Zw24e/view?usp=sharing" target="_blank" style="text-decoration: none; color: #7583a0;"><span>Parisha Pe Charcha</span></a>
                         </li>
                     </ul>
                 </div>
