--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            A Grade For Science Fair District Level - Arduino Project
+                            A Grade For Science Fair State Level - Working Model
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
