--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="subheading mb-5">
                         Kottayam,Kerala,India - 686538 · +919656006978 · <a href="mailto:godlykmathews@outlook.com">godlykmathews@outlook.com</a>
                     </div>
-                    <p><q>First, solve the problem. Then, write the code.</q> - John Johnson</p>
+                    <p style="color: rgba(61, 76, 26, 0.804);"><q>First, solve the problem. Then, write the code.</q> - John Johnson</p>
                     <p class="lead mb-5">I am a self-taught programmer and yes I started right from scratch.<br> I'm a Computer Science Student at THSS Puthuppally. Right now I'm seeking more skills in C++ and python.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://in.linkedin.com/in/godly-k-mathews-64552622a" target="_blank"><i class="fab fa-linkedin-in"></i></a>
