--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <h3 class="mb-0">MGM public School, Vakathanam, Kottayam</h3>
                             <div class="subheading mb-3">CBSE Delhi-Board</div>
                             <div>Grade 10</div>
-                            <div  class="two"><p>Score: 82.8%&emsp;</p><a target="_blank" style="text-decoration: none;" href="https://drive.google.com/file/d/1RGdMIh7qo05y3UORJOroYIQinlctsPXf/view?usp=sharing">Certificate</a></div>
+                            <div  class="two"><p>Score: 82.8%&emsp;</p><a target="_blank" style="text-decoration: none;" href="https://drive.google.com/file/d/1RGdMIh7qo05y3UORJOroYIQinlctsPXf/view?usp=sharing"><i class="fa-solid fa-paperclip"></i></a></div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2009 - March 2021</span></div>
                     </div>
@@ -117,6 +117,7 @@
                         <li class="list-inline-item"><i class="fab fa-cuttlefish"></i>++</li>
                         <li class="list-inline-item"><i class="fa-brands fa-java"></i></li>
                         <li class="list-inline-item"><i class="fa-brands fa-linux"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-database"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
@@ -160,20 +161,24 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            <div style="display: inline-block;"  class="flex-shrink-0"><a href="https://drive.google.com/file/d/1mrWR8sx1OTIZxZVnpc85PQQsqNLYG9sb/view?usp=sharing" target="_blank" style="text-decoration: none; color: #7583a0;"><span>YIP - Voice of customer(Voc-2021)</span></a></div>
+                            YIP - Voice of customer(Voc-2021)
+                            <a href="https://drive.google.com/file/d/1mrWR8sx1OTIZxZVnpc85PQQsqNLYG9sb/view?usp=sharing" target="_blank"><span><i class="fa-solid fa-paperclip"></i></span></a>
                         </li>
 
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            <a href="https://drive.google.com/file/d/1tgpgrJXEr1jhqhzKAFr2gZTr6XUuS_tP/view?usp=sharing" target="_blank" style="text-decoration: none; color: #7583a0;"><span>Arduino Workshop Participation</span></a>
+                            Arduino Workshop Participation
+                            <a href="https://drive.google.com/file/d/1tgpgrJXEr1jhqhzKAFr2gZTr6XUuS_tP/view?usp=sharing" target="_blank"><i class="fa-solid fa-paperclip"></i><span></span></a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            <a href="https://drive.google.com/file/d/1tgpgrJXEr1jhqhzKAFr2gZTr6XUuS_tP/view?usp=sharing" target="_blank" style="text-decoration: none; color: #7583a0;"><span>Jan Andolan for COVID-19 Appropriate Behaviour</span></a>
+                            Jan Andolan for COVID-19 Appropriate Behaviour
+                            <a href="https://drive.google.com/file/d/1tgpgrJXEr1jhqhzKAFr2gZTr6XUuS_tP/view?usp=sharing" target="_blank"><span><i class="fa-solid fa-paperclip"></i></span></a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            <a href="https://drive.google.com/file/d/1aBF0BFRB2QKaijoyOc5jx7kxZc2Zw24e/view?usp=sharing" target="_blank" style="text-decoration: none; color: #7583a0;"><span>Parisha Pe Charcha</span></a>
+                            Parisha Pe Charcha
+                            <a href="https://drive.google.com/file/d/1aBF0BFRB2QKaijoyOc5jx7kxZc2Zw24e/view?usp=sharing" target="_blank"><span><i class="fa-solid fa-paperclip"></i></span></a>
                         </li>
                     </ul>
                 </div>
@@ -183,8 +188,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-        <!--Chat-->
-<script type="text/javascript">function add_chatinline(){var hccid=26208037;var nt=document.createElement("script");nt.async=true;nt.src="https://www.mylivechat.com/chatinline.aspx?hccid="+hccid;var ct=document.getElementsByTagName("script")[0];ct.parentNode.insertBefore(nt,ct);}
-    add_chatinline();</script>
+        <!--live-Chat-->
+        <script type="text/javascript">function add_chatinline(){var hccid=26208037;var nt=document.createElement("script");nt.async=true;nt.src="https://www.mylivechat.com/chatinline.aspx?hccid="+hccid;var ct=document.getElementsByTagName("script")[0];ct.parentNode.insertBefore(nt,ct);}
+          add_chatinline();</script>
     </body>
 </html>
