--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                     </div>
                     <p style="color: rgba(61, 76, 26, 0.804);"><q>First, solve the problem. Then, write the code.</q> - John Johnson</p>
                     <p class="lead mb-5">I am a self-taught programmer, regularly practicing and learning new skills.<br>
-                        I'm a 12th Grade Computer Science Student at THSS Puthuppally. I have good skills in understanding new topics and problem-solving. Right now I'm seeking more skills in C++, python and Web designing skills.</p>
+                        I'm a 12th Grade Computer Science Student at THSS Puthuppally. I have good skills in understanding new topics and problem-solving.<br>
+                        Right now I'm seeking more skills in C++, python and Web designing skills.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://in.linkedin.com/in/godly-k-mathews-64552622a" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Godlykm" target="_blank" ><i class="fab fa-github"></i></a>
