--- a/index.html
+++ b/index.html
@@ -77,9 +77,17 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Arduino Workshop</h3>
                             <div class="subheading mb-3"></div>
-                            <p>One day Workshop by EDUNEXT.</p>
+                            <p>One day Workshop by EDUNEXT</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">April 10 2022</span></div>
+                    </div>  
+                    
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Web Designing</h3>
+                            <div class="subheading mb-3"></div>
+                            <p><a style="text-decoration: none;" href="https://godlykm.github.io/GodlyKMathews/"> Personal Webpage </a> <br> <a style="text-decoration: none;" href="https://thssp.github.io/thssputhuppally/"> THSS Puthuppally </a></p>
+                        </div>
                     </div>
                     
                 </div>
