--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Technical Higher Secondary School, IHRD, Kottayam</h3>
+                            <h3 class="mb-0">Technical Higher Secondary School, IHRD, Puthuppally, Kottayam</h3>
                             <div class="subheading mb-3">Physical Science-Plus Two</div>
                             <div>Computer Science - Electronics</div>
                             <p></p> <!--marks after +2-->
