--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Achievements</a></li>
                 </ul>
             </div>
@@ -80,16 +81,7 @@
                             <p>One day Workshop by EDUNEXT</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">April 10 2022</span></div>
-                    </div>  
-                    
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Designing</h3>
-                            <div class="subheading mb-3"></div>
-                            <p><a style="text-decoration: none;" href="https://godlykm.github.io/GodlyKMathews/"> Personal Webpage </a> <br> <a style="text-decoration: none;" href="https://thssp.github.io/thssputhuppally/"> THSS Puthuppally </a></p>
-                        </div>
-                    </div>
-                    
+                    </div>                      
                 </div>
             </section>
             <hr class="m-0" />
@@ -152,6 +144,19 @@
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart from being a techie, I enjoy most of my time with my family and friends.</p>
                     <p class="mb-0">When indoors, I follow a number of sci-fi and fantasy genre movies, latest songs and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!--My Projects-->
+            <section class="resume-section" id="projects">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Projects</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <div class="subheading mb-3">Technical HSS Puthuppally Website</div>
+                            <p class="mb-0"><span><i class="fa-solid fa-paperclip"></i></span><a href="https://thssp.github.io/thssputhuppally" style="text-decoration: none;" target="_blank"> bit.ly/thssputhuppally</a></p>
+                        </div>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
