--- a/index.html
+++ b/index.html
@@ -47,16 +47,18 @@
                         <span class="text-primary">K Mathews</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Kottayam,Kerala,India - 686538 · +919656006978 · <a href="mailto:godlykmathews@outlook.com">godlykmathews@outlook.com</a>
+                        Kottayam,Kerala,India · +919656006978 · <a href="mailto:godlykmathews@outlook.com">godlykmathews@outlook.com</a>
                     </div>
 
                     <p style="color: rgba(61, 76, 26, 0.804);"><q>First, solve the problem. Then, write the code.</q> - John Johnson</p>
 
-                    <p class="lead mb-5">I am a self-taught programmer, regularly practicing and learning new skills.<br>
-                        I'm a 12th Grade Computer Science Student at THSS Puthuppally.<br>
-                        I have good skills in understanding new topics and problem-solving. Right now I'm seeking more skills in C++, python and Web designing skills.</p>
-
-
+                    <p class="lead mb-5">Hello, I'm Godly K Mathews, a passionate self-taught programmer and a senior computer science student from Kerala, India.
+                        I have expertise in various programming languages such as C, C++, Python, and web designing.
+                        I have created my own website where I showcase my projects and articles, and I share my code repositories on GitHub.
+                        Alongside my technical skills, I enjoy spending quality time with my family and friends, watching sci-fi and fantasy movies, and reading books.
+                        I'm always open to new opportunities and challenges that can help me grow as a programmer. 
+                        Please feel free to contact me if you wish to connect or collaborate on something interesting. Thank you for visiting my page!
+                        </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://in.linkedin.com/in/godly-k-mathews-64552622a" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Godlykm" target="_blank" ><i class="fab fa-github"></i></a>
@@ -73,7 +75,6 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
                     
-                    
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Arduino Workshop</h3>
@@ -81,6 +82,14 @@
                             <p>One day Workshop by EDUNEXT</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">April 10 2022</span></div>
+                    </div> 
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Web designing</h3>
+                            <div class="subheading mb-3"></div>
+                            <p>Personal Website <span class="text-primary"> · October 2022</span></p>
+                            <p>Technical HS School, Puthuppally Website <span class="text-primary"> · Feb 2023</span></p>
+                        </div>
                     </div>                      
                 </div>
             </section>
@@ -93,7 +102,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Technical Higher Secondary School, IHRD, Puthuppally, Kottayam</h3>
                             <div class="subheading mb-3">Physical Science-Plus Two</div>
-                            <div>Computer Science - Electronics</div>
+                            <div>PCM with Computer Science & Electronic Systems</div>
                             <p></p> <!--marks after +2-->
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2021 - Present</span></div>
@@ -114,15 +123,23 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
-                        <li class="list-inline-item"><i class="fa-solid fa-c"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-cuttlefish"></i>++</li>
-                        <li class="list-inline-item"><i class="fa-brands fa-java"></i></li>
-                        <li class="list-inline-item"><i class="fa-brands fa-linux"></i></li>
-                        <li class="list-inline-item"><i class="fa-solid fa-database"></i></li>
+                    <ul class="list-inline">
+                        <li>Languages :</li>
+                        <ul>
+                            <li>HTML 5</li>
+                            <li>CSS</i></li>
+                            <li>C++</i></li>
+                            <li>C</li>
+                            <li>Python</li>
+                            <li>Java</li>
+                            <li>MySQL</li>
+                        </ul>
+                        <li>Tools :</li>
+                        <ul>
+                        <li>Linux</li>
+                        <li>Arduino</li>
+                        <li>Git</li>
+                        </ul>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
@@ -142,8 +159,15 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a techie, I enjoy most of my time with my family and friends.</p>
-                    <p class="mb-0">When indoors, I follow a number of sci-fi and fantasy genre movies, latest songs and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                   <p> I have a wide range of interests that reflect my curiosity and creativity. Some of them are: </p>
+                   <ul>
+                    <li> Technology:
+                             I love exploring the latest advancements in Technology. I have learned HTML, C++, Python and Web designing skills from various online sources such as YouTube channels and blogs. </li>
+                    <li> Movies:
+                             I enjoy watching sci-fi and fantasy genre movies that stimulate my imagination and challenge my perspective. Some of my favorites are The Matrix, Interstellar etc. </li>
+                    <li>  Cooking:
+                             I am an aspiring chef who likes to experiment with different ingredients. I often cook for my family and get their feedback on my dishes. </li>
+                            </ul>
                 </div>
             </section>
             <hr class="m-0" />
@@ -154,7 +178,21 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <div class="subheading mb-3">Technical HSS Puthuppally Website</div>
-                            <p class="mb-0"><span><i class="fa-solid fa-paperclip"></i></span><a href="https://thssp.github.io/thssputhuppally" style="text-decoration: none;" target="_blank"> bit.ly/thssputhuppally</a></p>
+                            <p>HTML5 · CSS · JavaScript · Bootstrap</p>
+                            <p class="mb-0"><span><i class="fa-solid fa-paperclip"></i></span><a href="https://thssp.github.io/thssputhuppally" style="text-decoration: none;" target="_blank">THSS Puthuppally</a></p>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <div class="subheading mb-3">Personal Website</div>
+                            <p>HTML5 · CSS · JavaScript · Bootstrap</p>
+                            <p class="mb-0"><span><i class="fa-solid fa-paperclip"></i></span><a href="https://GodlyKm.github.io/GodlyKMathews" style="text-decoration: none;" target="_blank">Godly K Mathews</a></p>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <div class="subheading mb-3">IOT Gas Sensing Robot with telegram Bot</div>
+                            <p>Arduino Uno · Motor Driver · ESP32 · UltraSonic Sensor · Gas Sensor · Flame Sensor</p>
                         </div>
                     </div>
                 </div>
