--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                     <p style="color: rgba(61, 76, 26, 0.804);"><q>First, solve the problem. Then, write the code.</q> - John Johnson</p>
 
-                    <p class="lead mb-5">Hello, I'm Godly K Mathews, a passionate self-taught programmer and a senior computer science student from Kerala, India.
+                    <p class="lead mb-5">Hello, I'm Godly K Mathews, a passionate self-taught programmer and a 12th grade student from Kerala, India.
                         I have expertise in various programming languages such as C, C++, Python, and web designing.
                         I have created my own website where I showcase my projects and articles, and I share my code repositories on GitHub.
                         Alongside my technical skills, I enjoy spending quality time with my family and friends, watching sci-fi and fantasy movies, and reading books.
