--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <div class="flex-grow-1">
                             <div class="subheading mb-3">Technical HSS Puthuppally Website</div>
                             <p>HTML5 · CSS · JavaScript · Bootstrap</p>
-                            <p class="mb-0"><span><i class="fa-solid fa-paperclip"></i></span><a href="https://thssp.github.io/thssputhuppally" style="text-decoration: none;" target="_blank">THSS Puthuppally</a></p>
+                            <p class="mb-0"><span><i class="fa-solid fa-paperclip"></i></span><a href="http:thssputhuppally.ihrd.ac.in" style="text-decoration: none;" target="_blank">thssputhuppally.ihrd.ac.in</a></p>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
