--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <div class="subheading mb-3">IOT Gas Sensing Robot with telegram Bot</div>
+                            <p class="mb-0"><span><i class="fa-solid fa-paperclip"></i></span><a href="https://drive.google.com/file/d/1QU19nXcldUOTbLtVXdWlivo7zidbVGAu/view?usp=share_link" style="text-decoration: none;" target="_blank">Project Image</a></p>
                             <p>Arduino Uno · Motor Driver · ESP32 · UltraSonic Sensor · Gas Sensor · Flame Sensor</p>
                         </div>
                     </div>
