--- a/index.html
+++ b/index.html
@@ -101,17 +101,18 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Technical Higher Secondary School, IHRD, Puthuppally, Kottayam</h3>
-                            <div class="subheading mb-3">Physical Science-Plus Two</div>
+                            <div class="subheading mb-3">HSE Board</div>
                             <div>PCM with Computer Science & Electronic Systems</div>
-                            <p></p> <!--marks after +2-->
+                            <p>90%</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">June 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2021 - May 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">MGM public School, Vakathanam, Kottayam</h3>
                             <div class="subheading mb-3">CBSE Delhi-Board</div>
                             <div>Grade 10</div>
+                            <p>83%</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2009 - March 2021</span></div>
                     </div>
