--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <span class="text-primary">K Mathews</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Kottayam,Kerala,India · +919656006978 · <a href="mailto:godlykmathews@outlook.com">godlykmathews@outlook.com</a>
+                        Kottayam,Kerala,India · <a href="mailto:godlykmathews@outlook.com">godlykmathews@outlook.com</a>
                     </div>
 
                     <p style="color: rgba(61, 76, 26, 0.804);"><q>First, solve the problem. Then, write the code.</q> - John Johnson</p>
