--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         <div class="flex-grow-1">
                             <div class="subheading mb-3">Personal Website</div>
                             <p>HTML5 · CSS · JavaScript · Bootstrap</p>
-                            <p class="mb-0"><span><i class="fa-solid fa-paperclip"></i></span><a href="https://GodlyKm.github.io/GodlyKMathews" style="text-decoration: none;" target="_blank">Godly K Mathews</a></p>
+                            <p class="mb-0"><span><i class="fa-solid fa-paperclip"></i></span><a href="https://godlykmathews.github.io/" style="text-decoration: none;" target="_blank">Godly K Mathews</a></p>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
