--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="Godly K Mathews" content="" />
         <title>Godly K Mathews</title>
-        <meta property="og:image" content="https://godlykm.github.io/GodlyKMathews/assets/img/profile.jpg" />
+        <meta property="og:image" content="https://godlykmathews.github.io/assets/img/profile.jpg" />
         <link rel="icon" type="image/x-icon" href="assets/img/icon.png" />
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
@@ -65,7 +65,6 @@
                         <a class="social-icon" href="https://twitter.com/Godlykmathews" target="_blank"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/mathews.ad345" target="_blank"><i class="fab fa-facebook-f"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/godly_k_mathews_" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                        <a class="social-icon" href="https://wa.me/%2B919656006978?text=Hii" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                     </div>
                 </div>
             </section>
