--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://in.linkedin.com/in/godly-k-mathews-64552622a" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/Godlykm" target="_blank" ><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/godlykmathews" target="_blank" ><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://twitter.com/Godlykmathews" target="_blank"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/mathews.ad345" target="_blank"><i class="fab fa-facebook-f"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/godly_k_mathews_" target="_blank"><i class="fa-brands fa-instagram"></i></a>
