--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                     <p style="color: rgba(61, 76, 26, 0.804);"><q>First, solve the problem. Then, write the code.</q> - John Johnson</p>
 
-                    <p class="lead mb-5">Hello, I'm Godly K Mathews, a passionate self-taught programmer and a 12th grade student from Kerala, India.
+                    <p class="lead mb-5">Hello, I'm Godly K Mathews, a passionate self-taught programmer and a Computer Science Engineering student from Kerala, India.
                         I have expertise in various programming languages such as C, C++, Python, and web designing.
                         I have created my own website where I showcase my projects and articles, and I share my code repositories on GitHub.
                         Alongside my technical skills, I enjoy spending quality time with my family and friends, watching sci-fi and fantasy movies, and reading books.
@@ -99,10 +99,17 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">College Of Engineering, Kallooppara, Pathanamthitta, Kerala</h3>
+                            <div class="subheading mb-3">APJ Abdul Kalam Technological University</div>
+                            <div>B.tech - Computer Science & Engineering</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2021 - May 2023</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Technical Higher Secondary School, IHRD, Puthuppally, Kottayam</h3>
                             <div class="subheading mb-3">HSE Board</div>
                             <div>PCM with Computer Science & Electronic Systems</div>
-                            <p>90%</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2021 - May 2023</span></div>
                     </div>
@@ -110,8 +117,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">MGM public School, Vakathanam, Kottayam</h3>
                             <div class="subheading mb-3">CBSE Delhi-Board</div>
-                            <div>Grade 10</div>
-                            <p>83%</p>
+                            <div>Grade 10</div>]
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2009 - March 2021</span></div>
                     </div>
