--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
                         <ul>
                             <li>HTML 5</li>
                             <li>CSS</i></li>
+                            <li>JavaScript</li>
+                            <li>Express</li>
+                            <li>Handle Bars</li>
                             <li>C++</i></li>
                             <li>C</li>
                             <li>Python</li>
@@ -142,9 +145,11 @@
                         </ul>
                         <li>Tools :</li>
                         <ul>
+                        <li>Nodejs</li>
                         <li>Linux</li>
                         <li>Arduino</li>
                         <li>Git</li>
+                        <li>Bootstrap</li>
                         </ul>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
