--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                         <a class="social-icon" href="https://twitter.com/Godlykmathews" target="_blank"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/mathews.ad345" target="_blank"><i class="fab fa-facebook-f"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/godly_k_mathews_" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a class="social-icon" href="https://www.cloudskillsboost.google/public_profiles/88fdcba9-40dc-445c-ac92-5e4c1f38a0d3" target="_blank"><i class="fa-solid fa-cloud"></i></a>
                     </div>
                 </div>
             </section>
@@ -117,7 +118,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">MGM public School, Vakathanam, Kottayam</h3>
                             <div class="subheading mb-3">CBSE Delhi-Board</div>
-                            <div>Grade 10</div>]
+                            <div>Grade 10</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2009 - March 2021</span></div>
                     </div>
@@ -137,6 +138,7 @@
                             <li>JavaScript</li>
                             <li>Express</li>
                             <li>Handle Bars</li>
+                            <li>MongoDB</li>
                             <li>C++</i></li>
                             <li>C</li>
                             <li>Python</li>
@@ -215,6 +217,22 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Awards & Certifications</h2>
                     <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Introduction to Large Language Models -  Google
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Introduction to Generative AI - Google
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Information Gathering Fundamentals - VertualCyberLabs
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Responsive Web DesignResponsive Web Design - freeCodeCamp
+                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             A Grade For Science Fair State Level - Working Model
