--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Achievements</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://drive.google.com/file/d/1dFeypWJPKtT5ezYAJ05A8aBOx6wOf1zp/view?usp=sharing">My Resume</a></li>
                 </ul>
             </div>
         </nav>
