--- a/index.html
+++ b/index.html
@@ -220,6 +220,10 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Programming in Java - Elite Certificate - NPTEL IIT Kharagpur
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Introduction to Large Language Models -  Google
                         </li>
                         <li>
