--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Web Developer Intern</h3>
                             <div class="subheading mb-3"></div>
-                            <p>Thinkvyne <span class="text-primary">Digital</span></p>
+                            <p> <span class="text-primary">Thinkvyne Digital</span><a href="https://thinkvyne.in" style="text-decoration: none;" target="_blank"><i class="fa-solid fa-link"></i></a></p></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2025 - present</span></div>
                     </div>                     
